RESOLVED FIXED42410
Many leaking DatasetDOMStringMaps seen on buildbot
https://bugs.webkit.org/show_bug.cgi?id=42410
Summary Many leaking DatasetDOMStringMaps seen on buildbot
Sam Weinig
Reported 2010-07-15 14:39:11 PDT
Many leaking DatasetDOMStringMaps seen on buildbot
Attachments
Patch (1.71 KB, patch)
2010-07-15 14:45 PDT, Sam Weinig
oliver: review+
Sam Weinig
Comment 1 2010-07-15 14:45:16 PDT
Oliver Hunt
Comment 2 2010-07-15 14:46:50 PDT
Comment on attachment 61728 [details] Patch r=me
Sam Weinig
Comment 3 2010-07-15 14:49:52 PDT
Landed in r63467.
Note You need to log in before you can comment on or make changes to this bug.