Patch for https://bugs.webkit.org/show_bug.cgi?id=42410 Many leaking DatasetDOMStringMaps seen on buildbot

Reviewed by Oliver Hunt.

* dom/NodeRareData.h:
(WebCore::NodeRareData::~NodeRareData): Add a virtual destructor so
that the ElementRareData's destructor will be called when this is deleted
from the Node's destructor.



git-svn-id: svn://svn.chromium.org/blink/trunk@63467 bbb929c8-8fbe-4397-9dbb-9b2b20218538